test: 🚦 replaced apartment name in tests with apartment number